--- a/style.css
+++ b/style.css
@@ -22,3 +22,42 @@ body, html {
     transform: translate(-50%, -50%);
     color: white;
 }
+
+div.stuff {
+    width: 250px;
+    /* height: fit-content; */
+    word-wrap: break-word;
+    overflow: auto;
+    text-align: left;
+    border-width: 1px;
+    border-style: dotted;
+    border-color: black;
+    float: left;
+    margin: 10px;
+    padding: 5px;
+  }
+
+div#first {
+    background-color:#A8A6B3 ;
+
+}
+
+div#second {
+    background-color: #B55C57;
+
+}
+
+div#third {
+    background-color: #AF7257;
+
+}
+
+div#fourth {
+    background-color: #E2A189;
+
+}
+
+div#fifth {
+    background-color: #918C88;
+
+}
