--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 /*universal properties */
 body, html {
     height: 100%;
+    font-family: dosis, sans-serif;
+    font-weight: 200;
+    color:white;
 }
+
+/* use Major Mono Display for all headings h1—h6 */
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Major Mono Display', monospace;
+
+
+  }
 
 /* style the hero-image div */
 .hero-image {
@@ -61,3 +71,39 @@ div#fifth {
     background-color: #918C88;
 
 }
+
+/* Style the navbar */
+#navbar {
+    overflow: hidden;
+    background-color: #1f0326;
+  }
+  
+  /* Navbar links */
+  #navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    font-family: 'Major Mono Display', monospace;
+      /* font-family rule copied from Google Fonts */
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+  }
+
+  /* Change color + highlight on hover. */
+#navbar a:hover {
+    color: hotpink;
+    background-color: white;
+  }
+
+  /* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+  .sticky + .content {
+    padding-top: 60px;
+  }
